crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@goal_body_unknown_block.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/goal_body_unknown_block.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/goal_body_unknown_block.velme",
      "help": "did you mean `check`?",
      "labels": [],
      "message": "I didn't expect `chek` here — I was looking for `budget`, `call`, `check`, `examples` or `plan`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 5,
        "end": 149,
        "line": 5,
        "start": 145
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
