crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@goal_decl_missing_arrow.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/goal_decl_missing_arrow.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/goal_decl_missing_arrow.velme",
      "labels": [],
      "message": "I didn't expect `Number` here — I was looking for `->`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 28,
        "end": 99,
        "line": 3,
        "start": 93
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
