crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@header_missing_colon.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/header_missing_colon.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "header_missing_colon.velme",
      "labels": [],
      "message": "I didn't expect `velme` here — I was looking for `:`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 10,
        "end": 61,
        "line": 3,
        "start": 56
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
