crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@header_not_first.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/header_not_first.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/header_not_first.velme",
      "help": "move it to the top of the file",
      "labels": [],
      "message": "The `language:` line has to be the first line of the file.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 1,
        "end": 105,
        "line": 6,
        "start": 86
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
