crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@header_other_language.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/header_other_language.velme
---
{
  "diagnostics": [
    {
      "code": "VL0106",
      "file": "header_other_language.velme",
      "help": "change the first line to `language: velme/0.1`",
      "labels": [],
      "message": "This file is written for `python/0.1`, but this Velme understands `velme/0.1`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 11,
        "end": 84,
        "line": 3,
        "start": 74
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
