crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@independent_errors.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/sema/reject/independent_errors.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "independent_errors.velme",
      "labels": [],
      "message": "I didn't expect the end of the line here — I was looking for an expression.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 19,
        "end": 213,
        "line": 7,
        "start": 213
      }
    },
    {
      "code": "VL0201",
      "file": "independent_errors.velme",
      "help": "did you mean `Number`?",
      "labels": [],
      "message": "I don't know a type called `Numbr`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 15,
        "end": 234,
        "line": 9,
        "start": 229
      }
    },
    {
      "code": "VL0304",
      "file": "independent_errors.velme",
      "help": "a goal can't use itself, even through other goals; move the shared work into a new goal",
      "labels": [],
      "message": "These goals call each other in a circle: Ping → Pong → Ping.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 9,
        "end": 334,
        "line": 14,
        "start": 320
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
