crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@nesting_too_deep.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/nesting_too_deep.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "nesting_too_deep.velme",
      "help": "split it into smaller pieces",
      "labels": [],
      "message": "This line nests too deeply for me to read.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 39,
        "end": 152,
        "line": 4,
        "start": 151
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
