crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@nothing_types.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/sema/reject/nothing_types.velme
---
{
  "diagnostics": [
    {
      "code": "VL0204",
      "file": "tests/golden/sema/reject/nothing_types.velme",
      "help": "use the type of the value, with `?` if it may be missing, like `Number?`",
      "labels": [],
      "message": "A value that can only be `nothing` carries no information.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 12,
        "end": 133,
        "line": 3,
        "start": 126
      }
    },
    {
      "code": "VL0204",
      "file": "tests/golden/sema/reject/nothing_types.velme",
      "help": "use the type of the value, with `?` if it may be missing, like `Number?`",
      "labels": [],
      "message": "A value that can only be `nothing` carries no information.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 12,
        "end": 153,
        "line": 4,
        "start": 145
      }
    },
    {
      "code": "VL0204",
      "file": "tests/golden/sema/reject/nothing_types.velme",
      "help": "use the type of the value, with `?` if it may be missing, like `Number?`",
      "labels": [],
      "message": "A value that can only be `nothing` carries no information.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 15,
        "end": 176,
        "line": 6,
        "start": 169
      }
    },
    {
      "code": "VL0204",
      "file": "tests/golden/sema/reject/nothing_types.velme",
      "help": "use the type of the value, with `?` if it may be missing, like `Number?`",
      "labels": [],
      "message": "A value that can only be `nothing` carries no information.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 27,
        "end": 189,
        "line": 6,
        "start": 181
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
